--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "lottie-react": "^2.4.0",
     "next": "13.x",
     "react": "18.x",
     "react-dom": "18.x"
